2012-03-01  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-lives.c (pseudos_live_through_calls): New sparseset.
	(pseudos_live_through_setjumps): Ditto.
	(check_pseudos_live_through_calls): New function.
	(process_bb_lives): Use the sparsesets and the function.
	(lra_create_live_ranges): Allocate and free sparsesets
	pseudos_live_through_calls and pseudos_live_through_setjumps.

	* lra-constraints.c (check_and_process_move): Try secondary reload
	for source and destination.

	* jump.c (true_regnum): Use hard_regno for subreg_get_info when
	lra is in progress.

2012-02-28  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (get_op_mode): Use mode from the machine
	description first.
	(match_reload, process_addr_reg, simplify_operand_subreg)
	(curr_insn_transform): Put after-reloads before already existing
	ones.
	(process_address): Use find_regno_note instead find_reg_note.

2012-02-28  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (check_and_process_move): Process source first
	for the secondary move.
	(process_alt_operands): Increase cost for scratch allocations.

2012-02-27  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-eliminations.c (eliminate_regs_in_insn): Rewrite by
	separating case with REPLACE_P for insn setting
	FRAME_POINTER_REGNUM.

2012-02-24  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-assigns.c (improve_inheritance): Add an argument.  Set it
	up.  Don't change allocation of a reload pseudo.
	(assign_by_spills): Pass parameter to improve_inheritance.

	* lra-constraints.c (extract_loc_address_regs): Process memory as
	a register.
	(process_addr_reg): Reload memory.
	(process_alt_operands): Use get_op_mode instead of GET_MODE.
	(process_address): Use find_reg_note instead of find_regno_note.

2012-02-23  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (inherit_in_ebb): Don't do inheritance from
	output of a jump.

2012-02-23  Vladimir Makarov  <vmakarov@redhat.com>
